Fix another bug related with z-index

--- a/src/github.com/pluralism/clagocerqueira/client/app/static/theme/style.scss
+++ b/src/github.com/pluralism/clagocerqueira/client/app/static/theme/style.scss
@@ -214,6 +214,7 @@ body {
             display: flex;
             width: 100%;
             height: 20vh;
+            z-index: 1000;
             align-items: flex-start;
             justify-content: flex-end;
 
@@ -231,14 +232,11 @@ body {
                     text-align: center;
                     color: #FFFFFF;
                     font-weight: 400;
-                    z-index: 1000;
                     cursor: pointer;
                 }
 
                 .month-photo {
                     padding: 5px;
-                    z-index: 1000;
-
 
                     img {
                         transition: all .5s ease-in-out;
